# logwrap

./: CMakeLists.txt  Makefile  README  klog.c  libc_logging.cpp  logwrap.c  logwrapper.c
include/: common.h
include/bionic_libc/: libc_logging.h
include/logwrap/: alog.h  libc_logging.h  log_api.h  logwrap.h
libcutils/: CMakeLists.txt
liblog/: CMakeLists.txt  log_read.c
libutils/: CMakeLists.txt
